--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ tauri = { version = "2.3.1", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+rusqlite = { version = "0.30", features = ["bundled"] }
